corrigir bugs (juro por Deus)

--- a/index.html
+++ b/index.html
@@ -1,51 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pagina pessoal</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css"
-</head>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-<body>
-<div class="container">
-  <img src="eu.jpg" alt="eu"> 
-  <nav>
-    <h1> Flávia Alves</h1> 
-      <h3>Brasileira</h3>
-      <h3>17 anos</h3>
-  </nav>
+  <body>
+    <div class="container pequeno">
+      <img src="eu.jpg" alt="eu" />
+      <nav>
+        <h1>Flávia Alves</h1>
+        <h3>Brasileira</h3>
+        <h3>17 anos</h3>
+      </nav>
+    </div>
+    <div class="container grande">
+      <div>
+        <h3 class="conteudo titulo">Um pouco mais sobre mim...</h3>
+        <p class="conteudo paragrafo">Patrocinio-Mg</p>
+        <p class="conteudo paragrafo">IFTM</p>
+        <p class="conteudo paragrafo">Desenhista,futura ilustradora</p>
+        <p class="conteudo paragrafo">cosplayer</p>
+        <h3 classe="titulo secundario">Hobies</h3>
+        <p conteudo="paragrafo titulo secundario">Dormir,</p>
+        <p conteudo="paragrafo titulo secundario">Desenhar,</p>
+        <p conteudo="paragrafo titulo secundario">Estudar botanica,</p>
+        <p conteudo="paragrafo titulo secundario">ver anime,</p>
+        <p conteudo="paragrafo titulo secundario">jogar,</p>
+        <p conteudo="paragrafo titulo secundario">cozinhar,</p>
+        <p conteudo="paragrafo titulo secundario">ler.</p>
+      </div>
+      <div class="redes-sociais">
+        <a href="https://www.twitter.com/Astpido4"
+          ><button><i class="fa-brands fa-twitter"></i> Twitter</button></a
+        >
+        <a href="https://www.instagram.com/https.flwnya/"
+          ><button><i class="fa-brands fa-instagram"></i> Instagram</button></a
+        >
+        <a href="https://open.spotify.com/user/317mbngl5hmcndhd2utvnct4w62i"
+          ><button><i class="fa-brands fa-spotify"></i> Spotify</button></a
+        >
+        <a href="https://github.com/httpsFlavia"
+          ><button><i class="fa-brands fa-github"></i> GitHub</button></a
+        >
+      </div>
+    </div>
 
-</nav>
-</div>
-<main class=" corpo de baixo"> 
-  <section class="conteudo">
-    <h3 class="conteudo titulo"> Um pouco mais sobre mim...</h3>
-      <p class="conteudo paragrafo">Patrocinio-Mg </p>
-      <p class="conteudo paragrafo">IFTM</p>
-      <p class="conteudo paragrafo">Desenhista,futura ilustradora</p>
-      <p class="conteudo paragrafo">cosplayer</p>
-    <h3 classe="titulo secundario">Hobies</h3>
-      <p conteudo="paragrafo titulo secundario"> Dormir,</p>
-      <p conteudo="paragrafo titulo secundario">Desenhar,</p>
-      <p conteudo="paragrafo titulo secundario">Estudar botanica,</p>
-      <p conteudo="paragrafo titulo secundario">ver anime,</p>
-      <p conteudo="paragrafo titulo secundario">jogar,</p>
-      <p conteudo="paragrafo titulo secundario">cozinhar,</p>
-      <p conteudo="paragrafo titulo secundario">ler.</p>
-      <img class="imagem pra linkar"nao redonda src="insta.png" alt="logo do instagram"
-  </section>
-      
-  <section>
-
-  </section>
-</main>
-
-
-
-  <footer class="rodape">
-        <h3 class="rodape imagem"> Flávia Alves, 2ºTINF</h3>
-  </footer>
-</body>
-
+    <footer class="rodape">
+      <p>Knezuko875@gmail.com</p>
+      <p>Flávia Alves, 2ºTINF</p>
+    </footer>
+  </body>
 </html>
